src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
a {
  text-decoration: none;
}

body {
  margin: 0;
  overflow-x: hidden!important;
  width: 100vw;
}
*{
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: 'Inter', sans-serif;
  z-index: 5;
}

